# Norrin.AI

./: .env.example  .gitignore  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  dashboard.py  data_collection.py  evaluation.py  feature_engineering.py  models.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
api/: dependencies.py  main.py
api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
api/routes/: admin.py  models.py  predictions.py
api/schemas/: __init__.py  request.py  response.py
config/: default.yaml  dev.yaml  sports_config.yaml  staging.yaml
dashboard/: app.py
dashboard/components/: __init__.py  charts.py  forms.py  metrics.py
dashboard/pages/: analysis.py  comparison.py  predictions.py  settings.py
data/: schema.sql  sports_prediction.sqlite
deployment/aws/: README.md  cloudformation.yaml  lambda_handler.py
deployment/docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
docs/: API_DOCS.md  ARCHITECTURE.md  CONTRIBUTING.md  DATA_DICTIONARY.md  DEPLOYMENT.md  MONITORING.md  README.md  SETUP.md
models/: cricket_feature_importance.csv  nba_feature_importance.csv
notebooks/: 02_eda_football.ipynb
scratch/: bing_output.html
scripts/: cleanup.sh  download_data.py  evaluate_models.py  install_deps.sh  preprocess_data.py  setup.py  train_models.py
sports_predictor/: __init__.py  config.py  data_collection.py  evaluation.py  feature_engineering.py  models.py  prediction_service.py  realtime_cricket.py
src/: __init__.py
tests/: conftest.py  test_pipeline.py  test_realtime.py
(+57 files in other folders)
